# MONOSCRIPT

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  READMEenglish.md  arc.txt  main.cpp  map.go
docs/: pubspec.yaml
docs/lib/: documentation_page.dart  main.dart  overview.dart
docs/lib/l10n/: app_en.arb  app_ru.arb
docs/test/: widget_test.dart
lexer/: Lexer.cpp  ParsingFunctions.cpp  main.cpp
lexer/headers/: Lexer.h  ParsingFunctions.h  Token.h
mono/: m_test.d  mono.toml  std.d  strings.d
parser/: Logic.cpp  Parser.cpp  Parsers.cpp
parser/headers/: AST.h  Parser.h
runtime/: Envioronment.cpp
src/: main.cpp
src/CLI/: ast_tools.cpp  cli.cpp  compile.cpp  runner.cpp  symantic.cpp
src/CLI/headers/: ast_tools.h  cli.h  compile.h  runner.h  symantic.h
src/errors/: ErrorEngine.cpp
src/errors/headers/: ErrorEngine.h
src/includes/: ASTDebugger.hpp
src/lexer/: Lexer.cpp
src/lexer/headers/: Lexer.h  Token.h
src/linker/: Linker.cpp
src/linker/headers/: Linker.h
src/loader/: loader.cpp
src/loader/headers/: loader.h
src/parser/: Logic.cpp  Parser.cpp  Parsers.cpp
src/parser/headers/: AST.h  Parser.h
src/runtime/: ASTGen.cpp  CodeGenContext.cpp
src/runtime/codegen/: Arrays.cpp  Declarations.cpp  Expressions.cpp  Statements.cpp  TypeConversions.cpp
src/runtime/headers/: ASTVisitors.h  CodeGenContext.h  CodeGenHandlers.h  TOMLstd.h
src/visitors/: BuiltIn.cpp  Register.cpp  SymanticVisitor.cpp
src/visitors/SymanticVisitor/: Expressions.cpp  NotFinished.cpp  Statements.cpp  Types.cpp  Utils.cpp
src/visitors/TypeSymbolVisitor/: Expressions.cpp  NotFinished.cpp  Operators.cpp  Statements.cpp  StructClass.cpp  Types.cpp  Utils.cpp
src/visitors/headers/: BuiltIn.h  Register.h  SymanticVisitor.h  TypeSymbolVisitor.h
std/: test.zig
web/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js
web/assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
